# LCL

./: .gitignore  CMakeLists.txt  LCL.cfg  README.md  build_all.ps1  build_all.sh  build_all_mingw.sh  version.txt
.github/workflows/: c-cpp.yml
Azahar/: CMakeLists.txt
Azahar/.cache/clangd/index/: base_core.hpp.2B1B0A9AF4C88838.idx  core.hpp.A3C8AA34206B61C7.idx  core_azahar.cpp.0B6EB0D7AA5A70A0.idx  core_launcher.c.5C027A3A50D80085.idx  core_launcher.cpp.7053A8DB748DF15E.idx  libretro.h.09C579ABF94B537F.idx
Azahar/include/: core.hpp
Azahar/src/: core.cpp
PPSSPP/: Makefile  PPSSPP_launcher_libretro.info  libretro-PPSSPP-launcher.c
cores/Windows/: Makefile  libretro-windows-launcher.c  windows_launcher_libretro.info
cores/azahar/: Makefile  azahar_launcher_libretro.info  libretro-azahar-launcher.c
cores/duckstation/: duckstation_launcher_libretro.info  libretro-duckstation-launcher.c
cores/lime3ds/: Makefile  libretro-lime3ds-launcher.c  lime3ds_launcher_libretro.info
cores/mGBA/: Makefile  libretro-mGBA-launcher.c  mGBA_launcher_libretro.info
cores/melonDS/: Makefile  libretro-melonDS-launcher.c  melonDS_launcher_libretro.info
cores/pcsx2/: Makefile  libretro-pcsx2-launcher.c
cores/rpcs3/: Makefile  libretro-rpcs3-launcher.c  libretro.h
cores/ryujinx/: Makefile  libretro-ryujinx-launcher.c  ryujinx_launcher_libretro.info
cores/xemu/: Makefile  libretro-xemu-launcher.c  xemu_launcher_libretro.info
cores/xenia/: Makefile  libretro-xenia-launcher.c  xenia_launcher_libretro.info
cores/xenia canary netplay/: Makefile  libretro-xenia-canary-netplay-launcher.c  xenia-canary-netplay_launcher_libretro.info
cores/xenia netplay/: Makefile  libretro-xenia_netplay-launcher.c  xenia_netplay_launcher_libretro.info
cores/xenia_canary/: libretro-xenia_canary-launcher.c  xenia_canary_launcher_libretro.info
duckstation/: duckstation_launcher_libretro.info  libretro-duckstation-launcher.c
include/: base_core.hpp  core.hpp  lcl_utils.hpp
info/: Ryujinx.info  Xenia.info  duckstation.info  libretro_azahar_launcher.info  libretro_duckstation_launcher.info  libretro_melonds_launcher.info  libretro_mgba_launcher.info  libretro_pcsx2_launcher.info  libretro_ryujinx_launcher.info  libretro_xemu_launcher.info  libretro_xenia_launcher.info  melonDS.info  mgba.info  ppsspp.info  rpcs3.info  windows.info  xemu.info
lime3ds/: libretro-lime3ds-launcher.c  lime3ds_launcher_libretro.info
linux/duckstation/: Makefile  libretro-duckstation-launcher.c
linux/lime3ds/: libretro-lime3ds-launcher.c
linux/mGBA/: libretro-mGBA-launcher.c
linux/melonDS/: libretro-melonDS-launcher.c
linux/pcsx2/: libretro-pcsx2-launcher.c  pcsx2_launcher_libretro.info
linux/rpcs3/: libretro-rpcs3-launcher.c  rpcs3_launcher_libretro.info
linux/ryujinx/: libretro-ryujinx-launcher.c
linux/xemu/: libretro-xemu-launcher.c
linux/xenia_canary/: libretro-xenia_canary-launcher.c  xenia_canary_launcher_libretro.info
mGBA/: libretro-mGBA-launcher.c  mGBA_launcher_libretro.info
macOS/PPSSPP/: PPSSPP_launcher_libretro.info  libretro-PPSSPP-launcher.c
macOS/duckstation/: duckstation_launcher_libretro.info  libretro-duckstation-launcher.c
macOS/lime3ds/: libretro-lime3ds-launcher.c  lime3ds_launcher_libretro.info
macOS/mGBA/: libretro-mGBA-launcher.c  mGBA_launcher_libretro.info
macOS/melonDS/: Makefile  libretro-melonDS-launcher.c  melonDS_launcher_libretro.info
macOS/pcsx2/: libretro-pcsx2-launcher.c
macOS/rpcs3/: libretro-rpcs3-launcher.c  rpcs3_launcher_libretro.info
macOS/ryujinx/: libretro-ryujinx-launcher.c
macOS/xemu/: libretro-xemu-launcher.c
macOS/xenia_canary/: Makefile  libretro-xenia_canary-launcher.c
melonDS/: libretro-melonDS-launcher.c  melonDS_launcher_libretro.info
pcsx2/: libretro-pcsx2-launcher.c  pcsx2_launcher_libretro.info
rpcs3/: libretro-rpcs3-launcher.c  rpcs3_launcher_libretro.info
src/: core.cpp  core_azahar.cpp  core_launcher.cpp  lcl_utils.cpp
windows/PPSSPP/: Makefile  PPSSPP_launcher_libretro.info  libretro-PPSSPP-launcher.c
windows/duckstation/: Makefile  libretro-duckstation-launcher.c
windows/lime3ds/: Makefile  libretro-lime3ds-launcher.c
windows/mGBA/: Makefile  libretro-mGBA-launcher.c
windows/melonDS/: libretro-melonDS-launcher.c  melonDS_launcher_libretro.info
windows/pcsx2/: libretro-pcsx2-launcher.c  pcsx2_launcher_libretro.info
windows/rpcs3/: libretro-rpcs3-launcher.c  rpcs3_launcher_libretro.info
windows/ryujinx/: Makefile  libretro-ryujinx-launcher.c
windows/xemu/: libretro-xemu-launcher.c  xemu_launcher_libretro.info
windows/xenia_canary/: libretro-xemu-launcher.c  libretro-xenia_canary-launcher.c  xenia_canary_launcher_libretro.info
xemu/: libretro-xemu-launcher.c  xemu_launcher_libretro.info
xenia_canary/: Makefile  libretro-xenia_canary-launcher.c
